--- a/app/src/main/res/menu/menu_cartas__magic.xml
+++ b/app/src/main/res/menu/menu_cartas__magic.xml
@@ -5,6 +5,8 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/refresh"
+        android:showAsAction="always"
+        tools:ignore="AppCompatResource"
+        app:showAsAction="always" />
 </menu>
