--- a/app/src/main/res/menu/menu_cartas__magic.xml
+++ b/app/src/main/res/menu/menu_cartas__magic.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.a47276138y.cartas_magic.Cartas_Magic">
     <item
-        android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/refresh"
         android:showAsAction="always"
         tools:ignore="AppCompatResource"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:id="@+id/action_refresh" />
 </menu>
