--- a/app/src/main/res/layout/lista_cartas_row.xml
+++ b/app/src/main/res/layout/lista_cartas_row.xml
@@ -4,19 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+
     <TextView
-        android:text="@string/nuevo_texto"
-        android:layout_width="wrap_content"
+        android:text="@string/name2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/carta"
+        android:textStyle="normal|bold"
+        android:textSize="24sp"
+        tools:textAlignment="viewStart"
+        android:id="@+id/name"
+        tools:layout_editor_absoluteY="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        android:gravity="center_vertical"
-        tools:minHeight="?attr/listPreferredItemHeight"
-        tools:style="@style/Base.TextAppearance.AppCompat.Medium" />
+        android:layout_marginLeft="16dp" />
+
+    <TextView
+        android:text="@string/types"
+        android:layout_width="0dp"
+        android:layout_height="22dp"
+        android:id="@+id/types"
+        tools:ignore="InvalidId"
+        android:textAllCaps="true"
+        app:layout_constraintTop_toBottomOf="@+id/name"
+        app:layout_constraintLeft_toLeftOf="@+id/name"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp" />
 </android.support.constraint.ConstraintLayout>
