Primera entrega Magic Cartes. Solució d'errors a alguns elements que no obtenien dades (power i number).

--- a/app/src/main/res/layout/fragment_cartas__magic.xml
+++ b/app/src/main/res/layout/fragment_cartas__magic.xml
@@ -9,8 +9,8 @@
     tools:showIn="@layout/activity_cartas__magic">
 
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
