--- a/app/src/main/res/layout/lista_cartas_row.xml
+++ b/app/src/main/res/layout/lista_cartas_row.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:text="@string/name2"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="normal|bold"
         android:textSize="24sp"
@@ -33,4 +33,5 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp" />
+
 </android.support.constraint.ConstraintLayout>
