--- a/app/src/main/res/layout/lista_cartas_row.xml
+++ b/app/src/main/res/layout/lista_cartas_row.xml
@@ -17,9 +17,10 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="100dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
+        android:layout_marginLeft="100dp"
+        app:layout_constraintHorizontal_bias="1.0" />
 
     <TextView
         android:text="@string/types"
@@ -33,5 +34,7 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp" />
+
+
 
 </android.support.constraint.ConstraintLayout>
