--- a/app/src/main/res/layout/lista_cartas_row.xml
+++ b/app/src/main/res/layout/lista_cartas_row.xml
@@ -17,9 +17,9 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="80dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="100dp"
+        android:layout_marginLeft="80dp"
         app:layout_constraintHorizontal_bias="1.0" />
 
     <TextView
@@ -35,6 +35,21 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp" />
 
+    <ImageView
+        android:layout_height="40dp"
+        app:srcCompat="@android:drawable/screen_background_light_transparent"
+        android:id="@+id/img_card"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintRight_toLeftOf="@+id/name"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:contentDescription=""
+        android:layout_width="45dp"
+        tools:ignore="ContentDescription" />
 
 
 </android.support.constraint.ConstraintLayout>
