--- a/app/src/main/res/menu/menu_cartas__magic.xml
+++ b/app/src/main/res/menu/menu_cartas__magic.xml
@@ -2,6 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.a47276138y.cartas_magic.Cartas_Magic">
+    <item android:title="@string/filter"
+        android:id="@+id/action_settings"
+        android:visible="true"
+        android:showAsAction="ifRoom" />
     <item
         android:orderInCategory="100"
         android:title="@string/refresh"
