--- a/app/src/main/res/menu/menu_cartas__magic.xml
+++ b/app/src/main/res/menu/menu_cartas__magic.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.a47276138y.cartas_magic.Cartas_Magic">
 
+    <item android:title="@string/settings"
+        android:id="@+id/action_settings"
+        android:showAsAction="ifRoom"
+        android:visible="true" />
     <item
         android:orderInCategory="100"
         android:title="@string/refresh"
