--- a/app/src/main/res/layout/lista_cartas_row.xml
+++ b/app/src/main/res/layout/lista_cartas_row.xml
@@ -8,78 +8,77 @@
 
     <TextView
         android:text="@string/type4"
-        android:layout_width="272dp"
-        android:layout_height="20dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:id="@+id/typeCard"
-        tools:layout_editor_absoluteX="80dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline" />
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintLeft_toLeftOf="@+id/nameCard"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="2dp" />
 
     <TextView
-        android:text="@string/color4"
-        android:layout_width="0dp"
+        android:text="@string/color5"
         android:id="@+id/colorCard"
-        app:layout_constraintRight_toRightOf="@+id/rarityCard"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/rarityCard"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
-        app:layout_constraintLeft_toLeftOf="@+id/rarityCard"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintTop_toBottomOf="@+id/rarityCard" />
+        app:layout_constraintLeft_toLeftOf="@+id/guideline2" />
 
     <TextView
         android:text="@string/rarity4"
-        android:layout_width="272dp"
-        android:layout_height="28dp"
         android:id="@+id/rarityCard"
+        app:layout_constraintLeft_toLeftOf="@+id/typeCard"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@+id/guideline"
-        app:layout_constraintRight_toRightOf="@+id/typeCard"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline2" />
+        android:layout_width="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="2dp" />
 
     <TextView
         android:text="@string/name4"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:id="@+id/nameCard"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintTop_toTopOf="@+id/imgCard"
         app:layout_constraintLeft_toLeftOf="@+id/guideline2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintBottom_toTopOf="@+id/typeCard" />
+        app:layout_constraintBottom_toTopOf="@+id/typeCard"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
     <ImageView
-        android:layout_width="79dp"
+        android:layout_width="match_parent"
         app:srcCompat="@android:drawable/screen_background_light_transparent"
         android:id="@+id/imgCard"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
         android:contentDescription=""
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline3" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_height="98dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintTop_toTopOf="@+id/guideline4"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <android.support.constraint.Guideline
         android:layout_height="0dp"
         android:id="@+id/guideline"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.12720157"
-        tools:layout_editor_absoluteY="65dp"
+        app:layout_constraintGuide_percent="0.1409002"
+        tools:layout_editor_absoluteY="72dp"
         tools:layout_editor_absoluteX="0dp"
-        android:layout_width="360dp" />
+        android:layout_width="384dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="511dp"
         android:id="@+id/guideline2"
-        app:layout_constraintGuide_begin="80dp"
+        app:layout_constraintGuide_begin="98dp"
         android:orientation="vertical"
         tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="80dp" />
+        tools:layout_editor_absoluteX="98dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -88,5 +87,14 @@
         app:layout_constraintGuide_begin="118dp"
         android:orientation="horizontal"
         tools:layout_editor_absoluteY="118dp"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="384dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline4"
+        app:layout_constraintGuide_begin="20dp"
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteY="20dp"
         tools:layout_editor_absoluteX="0dp" />
 </android.support.constraint.ConstraintLayout>
