--- a/app/src/main/res/layout/lista_cartas_row.xml
+++ b/app/src/main/res/layout/lista_cartas_row.xml
@@ -11,31 +11,34 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/typeCard"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintLeft_toLeftOf="@+id/nameCard"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="2dp" />
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/nameCard" />
 
     <TextView
         android:text="@string/color5"
         android:id="@+id/colorCard"
-        android:layout_height="wrap_content"
         android:layout_width="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
+        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/rarityCard"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/guideline3"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline2" />
+        app:layout_constraintBottom_toTopOf="@+id/guideline3" />
 
     <TextView
         android:text="@string/rarity4"
         android:id="@+id/rarityCard"
         app:layout_constraintLeft_toLeftOf="@+id/typeCard"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/guideline"
         android:layout_width="0dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="2dp" />
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/typeCard" />
 
     <TextView
         android:text="@string/name4"
@@ -43,13 +46,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/nameCard"
         app:layout_constraintLeft_toLeftOf="@+id/guideline2"
-        app:layout_constraintBottom_toTopOf="@+id/typeCard"
-        android:layout_marginBottom="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         app:srcCompat="@android:drawable/screen_background_light_transparent"
         android:id="@+id/imgCard"
         android:contentDescription=""
@@ -58,22 +59,15 @@
         android:layout_marginRight="8dp"
         android:layout_height="98dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <android.support.constraint.Guideline
-        android:layout_height="0dp"
-        android:id="@+id/guideline"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.1409002"
-        tools:layout_editor_absoluteY="72dp"
-        tools:layout_editor_absoluteX="0dp"
-        android:layout_width="384dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="1.0" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
-        android:layout_height="511dp"
+        android:layout_height="0dp"
         android:id="@+id/guideline2"
         app:layout_constraintGuide_begin="98dp"
         android:orientation="vertical"
@@ -90,11 +84,12 @@
         tools:layout_editor_absoluteX="0dp" />
 
     <android.support.constraint.Guideline
-        android:layout_width="384dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/guideline4"
         app:layout_constraintGuide_begin="20dp"
         android:orientation="horizontal"
         tools:layout_editor_absoluteY="20dp"
         tools:layout_editor_absoluteX="0dp" />
+
 </android.support.constraint.ConstraintLayout>
