--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,15 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/content_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.a47276138y.cartas_magic.DetailActivityFragment"
     tools:showIn="@layout/activity_detail">
 
+    <ImageView
+        android:id="@+id/image_detail"
+        android:layout_width="140dp"
+        android:layout_height="191dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:adjustViewBounds="true"
+        android:maxHeight="160dp"
+        android:scaleType="fitXY"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        android:layout_marginBottom="8dp" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/title_detail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Titulo"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/image_detail"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:text="Type"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/type_detail"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/image_detail"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/title_detail" />
+
+    <TextView
+        android:text="Rarity"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/rarity_detail"
+        tools:layout_editor_absoluteX="156dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/type_detail" />
+
+    <TextView
+        android:text="Color"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/color_detail"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/rarity_detail"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/image_detail"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp" />
+
+    <TextView
+        android:text="Resistencia"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/resistencia"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/image_detail"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/color_detail" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/text_detail"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/resistencia"
+        android:text="Text"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/image_detail"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        android:layout_marginBottom="8dp" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="384dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline"
+        app:layout_constraintGuide_begin="212dp"
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteY="212dp"
+        tools:layout_editor_absoluteX="0dp" />
+
+
+</android.support.constraint.ConstraintLayout>
