--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -10,7 +10,7 @@
 
     <ImageView
         android:id="@+id/image_detail"
-        android:layout_width="140dp"
+        android:layout_width="168dp"
         android:layout_height="191dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
@@ -55,12 +55,17 @@
 
     <TextView
         android:text="@string/rarity_detalle"
-        android:layout_width="220dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/rarity_detail"
-        tools:layout_editor_absoluteX="156dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/type_detail" />
+        app:layout_constraintTop_toBottomOf="@+id/type_detail"
+        app:layout_constraintLeft_toRightOf="@+id/image_detail"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp" />
 
     <TextView
         android:text="@string/color_detalle"
@@ -78,7 +83,7 @@
 
     <TextView
         android:text="@string/resistencia_detalle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/resistencia"
         android:layout_marginEnd="8dp"
@@ -91,7 +96,7 @@
         app:layout_constraintTop_toBottomOf="@+id/color_detail" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/text_detail"
         android:layout_marginTop="8dp"
