Afegida l'etiqueta xml amb "layout" al fragment_detail.xml i activat el DataBinding.

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -40,7 +41,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:text="Type detalle"
+        android:text="@string/type_detalle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/type_detail"
@@ -78,7 +79,7 @@
 
     <TextView
         android:text="@string/resistencia_detalle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/resistencia"
         android:layout_marginEnd="8dp"
@@ -91,7 +92,7 @@
         app:layout_constraintTop_toBottomOf="@+id/color_detail" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/text_detail"
         android:layout_marginTop="8dp"
@@ -117,3 +118,4 @@
 
 
 </android.support.constraint.ConstraintLayout>
+</layout>
