--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -42,26 +42,28 @@
 
         <TextView
             android:text="@string/type_detalle"
-            android:layout_width="0dp"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:id="@+id/type_detail"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/title_detail"
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toRightOf="@+id/image_detail"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/title_detail" />
+            android:layout_marginLeft="8dp" />
 
         <TextView
             android:text="@string/rarity_detalle"
-            android:layout_width="220dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/rarity_detail"
-            tools:layout_editor_absoluteX="156dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/type_detail" />
+            app:layout_constraintTop_toBottomOf="@+id/type_detail"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/image_detail"
+            android:layout_marginLeft="8dp" />
 
         <TextView
             android:text="@string/color_detalle"
@@ -104,8 +106,8 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline"
-            android:layout_marginBottom="8dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp" />
 
         <android.support.constraint.Guideline
             android:layout_width="0dp"
