Mostro un ProgressDialog mentre baixem les dades.

--- a/app/src/main/res/layout/lista_cartas_row.xml
+++ b/app/src/main/res/layout/lista_cartas_row.xml
@@ -26,7 +26,6 @@
         app:layout_constraintLeft_toLeftOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="1.0"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/rarityCard"
         app:layout_constraintBottom_toTopOf="@+id/guideline3" />
 
@@ -58,13 +57,13 @@
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_height="98dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintVertical_bias="0.25" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -76,12 +75,12 @@
         tools:layout_editor_absoluteX="98dp" />
 
     <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
+        android:layout_width="384dp"
         android:layout_height="wrap_content"
         android:id="@+id/guideline3"
-        app:layout_constraintGuide_begin="118dp"
+        app:layout_constraintGuide_begin="141dp"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteY="118dp"
+        tools:layout_editor_absoluteY="141dp"
         tools:layout_editor_absoluteX="0dp" />
 
     <android.support.constraint.Guideline
